== 1.5.0 2008-12-27

* Preparation for integration back into Rails
* --git/-g option for generated files to be added via git commands
* after_generate hook for generators (used as rails' templates mechanism)
* bumped activesupport requirement to 2.2.2

== 1.4.0 2008-12-11

* rubigen tests now pass against ruby 1.9.0 and ruby 1.9.1(prerelease 2)
* puts are sent to an explicit #stdout which can be STDOUT or a StringIO passed from tests; test output is now clean!

== 1.3.4 2008-11-12

* ruby_app: fixed reference to non-existent version.rb [jperkins]

== 1.3.3 2008-10-21

* prepend_sources correctly places arguments at start of sources list
* removed lib/rubigen/version.rb; RubiGen::VERSION is in lib/rubigen.rb now; there is no RubiGen::VERSION::STRING

== 1.3.2 2008-05-19

* app_gen/bin - includes #!/usr/bin/env ruby
* added examples of file_copy_each and template_copy_each to generators

== 1.3.1 2008-04-25

* Fixed the require statements in generated tests for rails/merb generators
* Rails::Generator::Base is a valid generator superclass
* Rails generators have alternate template (based on standard NamedBase)
* test helpers define RAILS_ROOT for rails generators

== 1.3.0 2008-04-25

* component_generator: specific subclasses for rails + merb generators,
  not the generic RubiGen::Base

== 1.2.3 2008-02-22

* Remove -wKU flags from install_rubigen_scripts + ruby_app apps

== 1.2.2 2008-02-20

* Removing one File.expand_path

== 1.2.1 2008-02-19

* Fixed rake post_news/email output bug ("\\n\\n")
* removed bad \" from generator banner strings
* destination_path/root have File.expand_path applied to them to ensure
  base_name gives useful term
* generate/destroy set APP_ROOT with expand_path too
  
== 1.2.0 2008-02-14

* application_generator's bin now looks for generator within local source, not
  within an install gem - so the bin/foo can be run in development without
  requiring installation.